# backtracks

./: .gitignore  .pyproject.toml.swp  LICENSE  PYPI_SAFE_README.rst  README.md  README.rst  backtrack.py  gaia_query_6204835284262018688.fits  pyproject.toml  requirements.txt  scorpions1b_orbitizelike.csv
.github/workflows/: main.yml
backtrack/: backtrack.py  plotting.py  utils.py
backtracks/: __init__.py  backtracks.py  bailer-jones_edr3.csv  plotting.py  utils.py
docs/: about.rst  additional-examples.ipynb  backtracks.rst  conf.py  index.rst  installation.rst  modules.rst  requirements.txt  tutorial.ipynb
src/backtracks/: backtrack.py  plotting.py
src/backtracks.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: 0602cc1.csv  HD_131399_A_dynestyrun_results.pkl  bailer-jones_edr3_prior_summary.csv  gaia_query_6204835284262018688.fits  hd131339a.py  hd165054_0_orbitizelike.csv  hd165054_orbitizelike.csv  scorpions1b_orbitizelike.csv  test_backtracks.py  test_plotting.py
